# nacl

./: .travis.yml  BUILD  BUILD.bazel  CHANGELOG.md  Makefile  README.md  WORKSPACE  example_test.go  go.mod  go.sum  nacl.go  nacl_test.go
.github/workflows/: ci.yml
auth/: BUILD.bazel  auth.go  auth_test.go  example_test.go
box/: BUILD.bazel  box.go  box_test.go  example_test.go
cmd/generate-sign-keypair/: main.go
cmd/nacl-box/: main.go
cmd/nacl-generate-box-key/: main.go
cmd/nacl-generate-key/: main.go
internal/subtle/: aliasing.go  aliasing_appengine.go  aliasing_test.go
onetimeauth/: BUILD.bazel  onetimeauth.go  onetimeauth_test.go
randombytes/: BUILD.bazel  randombytes.go  randombytes_test.go
scalarmult/: BUILD.bazel  scalarmult.go  scalarmult_test.go
secretbox/: BUILD.bazel  example_test.go  secretbox.go  secretbox_test.go
sign/: BUILD.bazel  example_test.go  sign.go  sign_test.go
sign/internal/edwards25519/: BUILD.bazel  edwards25519.go
stream/: BUILD.bazel  stream.go  stream_test.go
tools/: bazel_0.5.2-linux-x86_64.deb.sha256
