load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/kevinburke/nacl",
)

go_library(
    name = "go_default_library",
    srcs = ["nacl.go"],
    importpath = "github.com/kevinburke/nacl",
    visibility = ["//visibility:public"],
    deps = [
        "//randombytes:go_default_library",
        "@org_golang_x_crypto//salsa20/salsa:go_default_library",
    ],
)

go_prefix("github.com/kevinburke/nacl")

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["nacl_test.go"],
    importpath = "github.com/kevinburke/nacl",
    library = ":go_default_library",
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    importpath = "github.com/kevinburke/nacl_test",
    deps = [":go_default_library"],
)
