load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["auth.go"],
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["auth_test.go"],
    timeout = "short",
    library = ":go_default_library",
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["example_test.go"],
    timeout = "short",
    deps = [
        ":go_default_library",
        "//:go_default_library",
    ],
)
