load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["auth.go"],
    importpath = "github.com/kevinburke/nacl/auth",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["auth_test.go"],
    importpath = "github.com/kevinburke/nacl/auth",
    library = ":go_default_library",
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    importpath = "github.com/kevinburke/nacl/auth_test",
    deps = [
        ":go_default_library",
        "//:go_default_library",
    ],
)
