load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["box.go"],
    importpath = "github.com/kevinburke/nacl/box",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//scalarmult:go_default_library",
        "//secretbox:go_default_library",
        "@org_golang_x_crypto//salsa20/salsa:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["box_test.go"],
    importpath = "github.com/kevinburke/nacl/box",
    library = ":go_default_library",
    deps = ["//scalarmult:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    importpath = "github.com/kevinburke/nacl/box_test",
    deps = [
        ":go_default_library",
        "//:go_default_library",
    ],
)
