load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["onetimeauth.go"],
    importpath = "github.com/kevinburke/nacl/onetimeauth",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@org_golang_x_crypto//poly1305:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["onetimeauth_test.go"],
    importpath = "github.com/kevinburke/nacl/onetimeauth",
    library = ":go_default_library",
    deps = ["//randombytes:go_default_library"],
)
