load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["randombytes.go"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["randombytes_test.go"],
    library = ":go_default_library",
)
