load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["randombytes.go"],
    importpath = "github.com/kevinburke/nacl/randombytes",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["randombytes_test.go"],
    importpath = "github.com/kevinburke/nacl/randombytes",
    library = ":go_default_library",
)
