load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["scalarmult.go"],
    importpath = "github.com/kevinburke/nacl/scalarmult",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_crypto//curve25519:go_default_library"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["scalarmult_test.go"],
    importpath = "github.com/kevinburke/nacl/scalarmult",
    library = ":go_default_library",
)
