load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["secretbox.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//onetimeauth:go_default_library",
        "@org_golang_x_crypto//salsa20/salsa:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["secretbox_test.go"],
    library = ":go_default_library",
    timeout = "short",
    deps = [
        "//:go_default_library",
        "//randombytes:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["example_test.go"],
    timeout = "short",
    deps = [
        ":go_default_library",
        "//:go_default_library",
    ],
)
