load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["secretbox.go"],
    importpath = "github.com/kevinburke/nacl/secretbox",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//onetimeauth:go_default_library",
        "@org_golang_x_crypto//salsa20/salsa:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["secretbox_test.go"],
    importpath = "github.com/kevinburke/nacl/secretbox",
    library = ":go_default_library",
    deps = [
        "//:go_default_library",
        "//randombytes:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    importpath = "github.com/kevinburke/nacl/secretbox_test",
    deps = [
        ":go_default_library",
        "//:go_default_library",
    ],
)
