load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sign.go"],
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_crypto//ed25519:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["sign_test.go"],
    data = glob(["testdata/**"]),
    timeout = "short",
    library = ":go_default_library",
    deps = ["//sign/internal/edwards25519:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["example_test.go"],
    data = glob(["testdata/**"]),
    timeout = "short",
    deps = [":go_default_library"],
)
