load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sign.go"],
    importpath = "github.com/kevinburke/nacl/sign",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_crypto//ed25519:go_default_library"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["sign_test.go"],
    data = glob(["testdata/**"]),
    importpath = "github.com/kevinburke/nacl/sign",
    library = ":go_default_library",
    deps = ["//sign/internal/edwards25519:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    data = glob(["testdata/**"]),
    importpath = "github.com/kevinburke/nacl/sign_test",
    deps = [":go_default_library"],
)
