load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["stream.go"],
    importpath = "github.com/kevinburke/nacl/stream",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@org_golang_x_crypto//salsa20:go_default_library",
        "@org_golang_x_crypto//salsa20/salsa:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["stream_test.go"],
    importpath = "github.com/kevinburke/nacl/stream",
    library = ":go_default_library",
    deps = [
        "//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
